Updated spelling error

--- a/Ongoing report/OngoingReport 1.1.tex
+++ b/Ongoing report/OngoingReport 1.1.tex
@@ -328,7 +328,7 @@ A summary of research regarding Condition-Based Maintenance is given in \cite{me
 %ONGOING: Updated this after reading (2 paragraphs)
 While there is not much research relating specifically to decommission projects, some recent work has still been done in this field. In \cite{irawan2019optimisation} an attempt to optimise the decommissioning is made using an ILP. The model created focuses on minimising total costs, and takes many factors into account, such as both offshore and onshore logistics, components that can be sold and components that can be recycled. This broadness means the model is more accurate, but it also means they were not able to solve the exact problem. For this reason they tried various relaxations, and proposed a matheuristic method in which some integer constraints are relaxed. They use this method to create feasible and well-performing solutions in a short time.
 
-The above research will serve as the basis for the decommission model that I will use in my research, albeit with some likely simplifications, such as the specific logistics around recycling components. The expectation that the decommission process is very similar to the installation process is also mentioned in this research; they say this will largely be the cases, but the focus is shifted. In the installation process there often are strict deadline for when some or all the turbines need to be operational; that is rarely the case in decommissioning project, which is why their objective function is based on cost rather than duration. Additionally the different destinations for different components can bring an extra level of complexity; in the installation all components need to move from the ports to the windfarm, in the decommission some components move from the farm to recycling ports, other to regular ports from which they are transported inland, etc. 
+The above research will serve as the basis for the decommission model that I will use in my research, albeit with some likely simplifications, such as the specific logistics around recycling components. The expectation that the decommission process is very similar to the installation process is also mentioned in this research; they say this will largely be the case, but the focus is shifted. In the installation process there often are strict deadline for when some or all the turbines need to be operational; that is rarely the case in decommissioning project, which is why their objective function is based on cost rather than duration. Additionally the different destinations for different components can bring an extra level of complexity; in the installation all components need to move from the ports to the windfarm, in the decommission some components move from the farm to recycling ports, other to regular ports from which they are transported inland, etc. 
 
 \bigskip
 
