Partially added 3-mixed model

--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -16,6 +16,8 @@
   \titlepage
 \end{frame}
 
+%------------------------------------------------------------------INSTALL-----------------------------------------------------------------------
+
 \begin{frame}{Initial model for installation}
 \scriptsize
 \begin{equation}
@@ -90,6 +92,7 @@ Parameters:
 
 \end{frame}
 
+%------------------------------------------------------------------MAINTENANCE-----------------------------------------------------------------------
 
 \begin{frame}{Initial model for maintenance}
 \footnotesize
@@ -166,6 +169,8 @@ Parameters:
 
 \end{frame}
 
+%------------------------------------------------------------------2-MIXED-----------------------------------------------------------------------
+
 \begin{frame}{Initial 2-mixed model}
 \scriptsize
 
@@ -184,7 +189,7 @@ s_{ait} \leq& s_{ai(t+1)}																	& \forall a \in A, \forall i \in \math
 s_{ai\sigma_{it_N}} \geq& 1																& \forall a \in A, \forall i \in I\cup M^M			\\
 s_{ajt} \leq& s_{ai\sigma_{it}}																& \forall a \in A, \forall (i, j) \in IP, \forall t \in T 	\\
 N_{rp} \geq& \sum_{a\in A} \sum_{i\in \mathcal{I}} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}})) 						& \forall r \in R, \forall p \in P, \forall t \in T_p 		\\
-o_{at} \leq& \frac{1}{2} \cdot (s_{ai_N\sigma_{i_Nt}} + \sum_{i \in M \cup \{i_N\}} [s_{ai\sigma_{it}} - s_{ai\sigma_{i(t-\lambda_a)}}]	& \forall a \in A, \forall t \in T			\\
+o_{at} \leq& \frac{1}{2} \cdot (s_{ai_N\sigma_{i_Nt}} + \sum_{i \in M \cup \{i_N\}} [s_{ai\sigma_{it}} - s_{ai\sigma_{i(t-\lambda_a)}}])	& \forall a \in A, \forall t \in T			\\
 O_t =& \sum_{a \in A} o_{at}																& \forall t \in T 						\\
 N_{rp} \leq& m_{rp}																	& \forall r \in R, \forall p \in P
 \end{align}
@@ -246,6 +251,8 @@ Parameters:
 \end{columns}
 
 \end{frame}
+
+%------------------------------------------------------------------DECOMMISSION-----------------------------------------------------------------------
 
 \begin{frame}{Initial model for decommission}
 \scriptsize
@@ -314,6 +321,89 @@ Parameters:
 \item $\sigma_{it}$: Indicates the timestep at which task $i$ should have been started for it to be finished by timestep $t$, taking into account the duration and the weather conditions
 \item $\rho_{ir}$: The amount of resource $r$ used by task $i$
 \item $t_p$: The final time interval (from $T$) before period $p$
+\item $m_{rp}$: The maximum amount of resources $r$ that can be charatered in period $p$
+\end{itemize}
+\end{column}
+\end{columns}
+
+\end{frame}
+
+%------------------------------------------------------------------3-MIXED-----------------------------------------------------------------------
+
+\begin{frame}{Initial 3-mixed model}
+\scriptsize
+
+\begin{equation}
+	\max_{\substack{O_t, N_{rp} \in \mathbb{Z}^* \\ 
+	s_{ait}, o_{at} \in \{0, 1\}}} 
+	\sum_{p \in P} [ DIS^p (\sum_{t\in T_p} (O_t \cdot v_t)  - \sum_{r\in R} (N_{rp} \cdot C_{rp})) ]
+\end{equation}
+
+\bigskip
+
+subject to:
+
+\begin{align}
+s_{ait} \leq& s_{ai(t+1)}																	& \forall a \in A, \forall i \in \mathcal{I}, \forall t \in T	\\
+s_{ai\sigma_{it_N}} \geq& 1																& \forall a \in A, \forall i \in I\cup M^M \cup D		\\
+s_{ajt} \leq& s_{ai\sigma_{it}}																& \forall a \in A, \forall (i, j) \in IP, \forall t \in T 	\\
+N_{rp} \geq& \sum_{a\in A} \sum_{i\in \mathcal{I}} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}})) 						& \forall r \in R, \forall p \in P, \forall t \in T_p 		\\
+o_{at} \leq& \frac{1}{2} \cdot (s_{ai_N\sigma_{i_Nt}} + \sum_{i \in M \cup \{i_N\}} [s_{ai\sigma_{it}} - s_{ai\sigma_{i(t-\lambda_a)}}] - s_{ai^d_0t})	& \forall a \in A, \forall t \in T			\\
+O_t =& \sum_{a \in A} o_{at}																& \forall t \in T 						\\
+N_{rp} \leq& m_{rp}																	& \forall r \in R, \forall p \in P
+\end{align}
+
+\end{frame}
+
+\begin{frame}{3-Mixed Model Explanation}
+(15) Objective function, sums up profits from energy made, subtracts money used on resources (vessels), and multiplies it all with a discount factor	\\
+(16) Makes every task that is started stay started 	\\
+(17) Forces every installation and mandatory maintenance task to be starded and finished by the final timestep	\\
+(18) For every precedence relation $(i, j)$, ensures that $i$ is finished before $j$ is started 	\\
+(19) Counts up the resources needed in a time period by adding the resources needed by all tasks started, and subtracting the resources needed by all tasks finished	\\
+(20) Sets an asset to be online if it installed and had work done on it recently \\
+(21) Counts how many assets are online \\
+(22) Sets a limit on the amount of vessels that can be charatered in a given period
+\end{frame}
+
+\begin{frame}{Notation overview}
+\tiny
+
+\begin{columns}
+\begin{column}{.48\textwidth}
+Sets:
+\begin{itemize}
+\item $P$: All time periods (large scale)
+\item $T$: All time intervals (small scale) [$t_0, \dots , t_N$]
+\item $T_p \in T$: All time intervals (small scale) in period $p$
+\item $R$: All resources
+\item $I$: All installation tasks per asset [$1, \dots , i_N$]
+\item $M = M^M \cup M^O$: all mandatory and optional maintenance tasks
+\item $\mathcal{I} = I \cup M$: All tasks
+\item $IP$: All precedency pairs ($i$, $j$)
+\item $A$: All assets
+\end{itemize}
+
+Decision variables:
+\begin{itemize}
+\item $O_{t}$: Number of online turbines at timestep $t$
+\item $o_{at}$: Binary variable, 1 if asset $a$ is online at timestep $t$
+\item $N_{rp}$: Number of resources $r$ used in period $p$
+\item $s_{ait}$: Binary variable, 1 if task $i \in \mathcal{I}$ for asset $a$ has started at or before time $t$
+\end{itemize}
+\end{column}
+
+\hfill
+
+\begin{column}{.48\textwidth}
+Parameters:
+\begin{itemize}
+\item $DIS$: The discount factor per time period
+\item $v_t$: The value of energy a single turbine produces at timestep $t$
+\item $C_{rp}$: The cost of chartering resource $r$ in period $p$
+\item $\lambda_a$: The number of timesteps after the last maintenance before asset $a$ fails
+\item $\sigma_{it}$: Indicates the timestep at which task $i$ should have been started for it to be finished by timestep $t$, taking into account the duration and the weather conditions
+\item $\rho_{ir}$: The amount of resource $r$ used for task $i \in \mathcal{I}$
 \item $m_{rp}$: The maximum amount of resources $r$ that can be charatered in period $p$
 \end{itemize}
 \end{column}
