--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -192,7 +192,8 @@ s_{ait} \leq& s_{ai(t+1)}																	& \forall a \in A, \forall i \in \math
 s_{ai\sigma_{it_N}} \geq& 1																& \forall a \in A, \forall i \in I\cup M^M			\\
 s_{ajt} \leq& s_{ai\sigma_{it}}																& \forall a \in A, \forall (i, j) \in IP, \forall t \in T 	\\
 N_{rp} \geq& \sum_{a\in A} \sum_{i\in \mathcal{I}} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}})) 						& \forall r \in R, \forall p \in P, \forall t \in T_p 		\\
-o_{at} \leq& \frac{1}{2} \cdot (s_{ai_N\sigma_{i_Nt}} + \sum_{i \in M \cup \{i_N\}} [s_{ai\sigma_{it}} - s_{ai\sigma_{i(t-\lambda_a)}}])	& \forall a \in A, \forall t \in T			\\
+o_{at} \leq& s_{ai_N\sigma_{i_Nt}}															& \forall a \in A, \forall t \in T			\\
+o_{at} \leq& \sum_{i \in M \cup \{i_N\}} [s_{ai\sigma_{it}} - s_{ai\sigma_{i(t-\lambda_a)}}]							& \forall a \in A, \forall t \in T			\\
 N_{rp} \leq& m_{rp}																	& \forall r \in R, \forall p \in P
 \end{align}
 
@@ -204,7 +205,8 @@ N_{rp} \leq& m_{rp}																	& \forall r \in R, \forall p \in P
 \expl Forces every installation and mandatory maintenance task to be starded and finished by the final timestep	\\
 \expl For every precedence relation $(i, j)$, ensures that $i$ is finished before $j$ is started 	\\
 \expl Counts up the resources needed in a time period by adding the resources needed by all tasks started, and subtracting the resources needed by all tasks finished	\\
-\expl Sets an asset to be online if it installed and had work done on it recently \\
+\expl An asset can only be online if it finished installation \\
+\expl An asset can only be online if it had work done on it recently enough \\
 \expl Sets a limit on the amount of vessels that can be charatered in a given period
 \end{frame}
 
@@ -347,7 +349,7 @@ s_{ajt} \leq& s_{ai\sigma_{it}}																& \forall a \in A, \forall (i, j)
 m_{rp} \geq N_{rp} \geq& \sum_{a\in A} \sum_{i\in \mathcal{I}} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}})) 				& \forall r \in R, \forall p \in P, \forall t \in T_p 		\\
 o_{at} \leq& s_{ai^I_N\sigma_{i^I_Nt}} - s_{ai^D_0t}												& \forall a \in A, \forall t \in T				\\
 o_{at} \leq& \sum_{i \in M \cup \{i^I_N\}} (s_{ai\sigma_{it}} - s_{ai\sigma_{i(t-\lambda_a)}})						& \forall a \in A, \forall t \in T				\\
-o_{at} \leq& 1 + s_{ai\sigma_{it}} - s_{ait}														& \forall i \in M, \forall a \in A, \forall t \in T		
+o_{at} \leq& 1 + s_{ai\sigma_{it}} - s_{ait}														& \forall a \in A, \forall i \in M, \forall t \in T		
 \end{align}
 
 \end{frame}
