--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -343,13 +343,14 @@ Parameters:
 subject to:
 
 \begin{align}
-s_{ait} \leq& s_{ai(t+1)}																	& \forall a \in A, \forall i \in \mathcal{I}, \forall t \in T	\\
-s_{ai\sigma_{it_N}} \geq& 1																& \forall a \in A, \forall i \in \mathcal{I} - M^O		\\
-s_{ajt} \leq& s_{ai\sigma_{it}}																& \forall a \in A, \forall (i, j) \in IP, \forall t \in T 	\\
-m_{rp} \geq N_{rp} \geq& \sum_{a\in A} \sum_{i\in \mathcal{I}} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}})) 				& \forall r \in R, \forall p \in P, \forall t \in T_p 		\\
-o_{at} \leq& s_{ai^I_N\sigma_{i^I_Nt}} - s_{ai^D_0t}												& \forall a \in A, \forall t \in T				\\
-o_{at} \leq& \sum_{i \in M \cup \{i^I_N\}} (s_{ai\sigma_{it}} - s_{ai\sigma_{i(t-\lambda_a)}})						& \forall a \in A, \forall t \in T				\\
-o_{at} \leq& 1 + s_{ai\sigma_{it}} - s_{ait}														& \forall a \in A, \forall i \in M, \forall t \in T		
+s_{ait} \leq& s_{ai(t+1)}															& \forall a \in A, \forall i \in \mathcal{I}, \forall t \in T		\\
+s_{ai\sigma_{it_N}} \geq& 1														& \forall a \in A, \forall i \in \mathcal{I} - M^O			\\
+s_{ai^D_0t} - 1 \leq& s_{ai\sigma_{it}} - s_{ait}											& \forall a \in A, \forall i \in \mathcal{I} - D, \forall t \in T	\\
+s_{ajt} \leq& s_{ai\sigma_{it}}														& \forall a \in A, \forall (i, j) \in IP, \forall t \in T 		\\
+m_{rp} \geq N_{rp} \geq& \sum_{a\in A} \sum_{i\in \mathcal{I}} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}})) 		& \forall r \in R, \forall p \in P, \forall t \in T_p 			\\
+o_{at} \leq& s_{ai^I_N\sigma_{i^I_Nt}} - s_{ai^D_0t}										& \forall a \in A, \forall t \in T					\\
+o_{at} \leq& \sum_{i \in M \cup \{i^I_N\}} (s_{ai\sigma_{it}} - s_{ai\sigma_{i(t-\lambda_a)}})				& \forall a \in A, \forall t \in T					\\
+o_{at} \leq& 1 + s_{ai\sigma_{it}} - s_{ait}												& \forall a \in A, \forall i \in M, \forall t \in T		
 \end{align}
 
 \end{frame}
@@ -359,6 +360,7 @@ o_{at} \leq& 1 + s_{ai\sigma_{it}} - s_{ait}														& \forall a \in A, \fo
 \expl Objective function, sums up profits from energy made, subtracts money used on resources (vessels), and multiplies it all with a discount factor	\\
 \expl Makes every task that is started stay started 	\\
 \expl Forces every installation and mandatory maintenance task to be starded and finished by the final timestep	\\
+\expl Ensures every non-decommission task is inactive during decomission \\
 \expl For every precedence relation $(i, j)$, ensures that $i$ is finished before $j$ is started 	\\
 \expl Counts up the resources needed in a time period by adding the resources needed by all tasks started, and subtracting the resources needed by all tasks finished. It also sets a limit on the amount of vessels that can be charatered in a given period	\\
 \expl An asset can only be online if installation is complete and decomission has not started yet \\
@@ -381,7 +383,7 @@ Sets:
 \item $M = M^M \cup M^O$: all mandatory and optional maintenance tasks
 \item $D$: All decomission tasks per asset [$i^D_0, \dots , i^D_N$]
 \item $\mathcal{I} = I \cup M \cup D$: All tasks
-\item $IP$: All precedency pairs ($i$, $j$)
+\item $IP$: All precedency pairs ($i$, $j$). Includes relations stating that the final installation task is finished before maintenance and decomission are started. 
 \item $A$: All assets
 \end{itemize}
 
