Updated paragraph about Pareto efficiency

--- a/Ongoing report/OngoingReport 1.1.tex
+++ b/Ongoing report/OngoingReport 1.1.tex
@@ -376,7 +376,8 @@ A more recent overview of the state of robust optimisation is given in \cite{gab
 In \cite{burke2010multi} a robust optimisation approach is applied to a multi-objective airline scheduling problem, the nature of which has certain similarities to offshore scheduling problems. Their approach, which used both genetic evolution and local search, focused on the multi-objective nature of balancing reliability and flexibility, two robustness objectives. 
 Another study looking into robust scheduling is \cite{goren2008robustness}. It considers a single-machine scheduling problem where the machine randomly breaks down. A single-machine scheduling problem is comparable to a project at an OWF with a single vessel. The vessel temporarily having to wait out weather conditions would then relate to the machine breaking down. For this reason the findings in this study may be roughly applicable in offshore scheduling problems. However one key observation is that single machine scheduling problems often behave different from multi-machine scheduling problems, and most projects on OWFs will employ multiple vessels. 
 
-As for research about the theory of robust optimisation, \cite{iancu2013pareto} introduces the concept of Pareto efficiency, which comes from economics and multi-objective optimisation. For a multi-objective problem a solution is Pareto efficient (also called Pareto optimal) if any change that gives a better value in one objective function will lead to a worse value in at least one other objective function. For such problems, any desirable solution will be Pareto optimal, and all Pareto optimal solutions together form the Pareto barrier. In \cite{iancu2013pareto} the writers state that within robust optimisation problems there will be a set of solutions which perform optimally within all tested worst-case scenarios, the so called Robustly Optimal (RO) solutions. They then identify some of these RO solutions to be Pareto Robustly Optimal (PRO), which means no other RO solution performs better than the PRO solutions across all possible scenarios. Effectively, they say that RO is not a strong enough requirement for solutions, as in reality the worst-case scenario will not often happen, and a solution being RO says nothing about how that solution will perform in a scenario which is not the worst-case. They then provide a method to generate a PRO solution from any RO solution in a time complexity not greater than the time complexity of the original problem, thereby not significantly increasing the time complexity to finding the desired solution. This paper is a couple of years old now, and their concept of Pareto Robustly Optimal solutions seems to have been used in various research papers since then. 
+%ONGOING: Updated this paragraph
+As for research about the theory of robust optimisation, \cite{iancu2013pareto} introduces the concept of Pareto efficiency, which comes from economics and multi-objective optimisation. For a multi-objective problem a solution is Pareto efficient (also called Pareto optimal) if any change that gives a better value in one objective function will lead to a worse value in at least one other objective function. For such problems, any desirable solution will be Pareto optimal, and all Pareto optimal solutions together form the Pareto barrier. In \cite{iancu2013pareto} the writers state that within robust optimisation problems there will be a set of solutions which perform optimally within all tested worst-case scenarios, the so called Robustly Optimal (RO) solutions. However, since the only requirement on RO solutions is that they perform optimally in the worst-case scenario, they might not perform well in other scenarios. The research shows that RO solutions exist that perform the same or better in every scenario than other RO solutions, which they call one solution Pareto-dominating another solution. They call RO solutions that are not Pareto-dominated by any other RO solution Pareto Robustly Optimal (PRO). They suggest a way to generate PRO solutions by first generating a RO solution and then optimising it for an arbitrary realisation of the uncertain parameters. This method will have the same computational complexity as the original problem. This method works whether the uncertainty exists in the objective function or the constraints of the problem, and the strength is demonstrated using three common types of optimisation problems. This work is a couple of years old now, and their concept of Pareto Robustly Optimal solutions seems to have been used in various research papers since then. 
 
 \pagebreak
 
